2007-04-21 Albert Chu  <chu11@llnl.gov>

	* META: Updated release.

	* Makefile.am: Add gendersllnl.spec to dist.

	* tagged gendersllnl-1-7-1

2007-04-20 Mike Miller <miller87@llnl.gov>

	* dist/dist2: Added ability to use genders values via
	${attrval_[value]}.
	
	* dist/Tutorial: Added text and examples for new attrval
	functionality.
	
	* man/dist/dist2.1: Added text and examples for new attrval
	functionality.
	
2007-04-17 Albert Chu  <chu11@llnl.gov>

	* man/dist/dist2.1: Fix typo.
	
2007-03-13  Albert Chu  <chu11@llnl.gov>

	* src/Gendersllnl/Gendersllnl.pm.in: Add return type info for
	get_cluster().
	
2007-01-16  Albert Chu  <chu11@llnl.gov>

	* tagged pre_aix_patches.

	Apply AIX port patches by Py Watson (watson30 at llnl dot gov)

	* configure.ac, compat/Makefile.am, src/Genders/Makefile.am:
	Determine and use correct extension for Perl's section-3 man
	pages.

        * compat/Makefile.am, src/Genders/Makefile.am: Correct calculation
	of where perl expects to put site architecture specific files.  As
	part of this, make the perl install directory consistent with what
	is used for Libgendersllnl.  Use $PERL instead of perl, so that
	correct perl version is used.
	
        * src/Libgendersllnl/Makefile.am: Override the install location
	for the Libgendersllnl man page, since the perl default is not
	based off of the install prefix.

        * Makefile.am: Replace --with-perl-install-destdir with
        --with-perl-destdir.

	* config/ac_genders_includedir.m4, config/ac_genders_libdir.m4: New files.

	* src/Libgendersllnl/Makefile.PL, src/libgendersllnl/Makefile.am:
	On AIX, set the compiled-in library path for dynamic libraries to
	the path where the C library is installed plus the default library
	path. Otherwise, the library path contains an entry for the
	genders library in the source directory.
	
	* src/libgendersllnl/Makefile.am: Correct CFLAGS variable name.

	* tagged post_aix_patches.
	
2007-01-12  Albert Chu  <chu11@llnl.gov>
