@@ -1,10 +1,8 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.9 2007-04-21 14:36:22 chu11 Exp $
+## $Id: Makefile.am,v 1.10 2007-04-21 14:47:28 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
-
-include config/Make-rpm.mk
 
 DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base
 
