@@ -4,9 +4,9 @@ Release: @RELEASE@
 Summary: LLNL site specific genders libraries
 Group: System Environment/Base
 License: GPL
-Source: %{name}-%{version}-%{release}.tgz
+Source: %{name}-%{version}.tgz
 Requires: genders >= 1.2
-BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}
+BuildRoot: %{_tmppath}/%{name}-%{version}
 
 %description
 Gendersllnl is a set of Lawrence Livermore National Laboratory (LLNL)
@@ -22,7 +22,7 @@ Sets of file distribution tools used specifically by LLNL.  The tools
 will most likely not work by default in a non-LLNL environment.
 
 %prep
-%setup  -q -n %{name}-%{version}-%{release}
+%setup  -q -n %{name}-%{version}
 
 %build
 %configure --program-prefix=%{?_program_prefix:%{_program_prefix}} --with-perl-destdir="$RPM_BUILD_ROOT"
